don't bother newing/deleting the struct, create it on the stack

BUG:273029