applets/community/opendesktop.cpp
@@ -51,16 +51,6 @@ K_EXPORT_PLASMA_APPLET(opendesktop, OpenDesktop)
 
 using namespace Plasma;
 
-struct GeoLocation {
-    QString country;
-    QString city;
-    QString countryCode;
-    int accuracy;
-    qreal latitude;
-    qreal longitude;
-};
-
-
 OpenDesktop::OpenDesktop(QObject *parent, const QVariantList &args)
     : Plasma::PopupApplet(parent, args),
         m_tabs(0),
@@ -78,13 +68,10 @@ OpenDesktop::OpenDesktop(QObject *parent, const QVariantList &args)
     setPassivePopup(true);
 
     setPopupIcon("system-users");
-
-    m_geolocation = new GeoLocation;
 }
 
 OpenDesktop::~OpenDesktop()
 {
-    delete m_geolocation;
 }
 
 void OpenDesktop::init()
@@ -250,15 +237,15 @@ void OpenDesktop::dataUpdated(const QString &source, const Plasma::DataEngine::D
 
     if (source == "location") {
         // The location from the geolocation engine arrived!
-        m_geolocation->city = data["city"].toString();
-        m_geolocation->country = data["country"].toString();
-        m_geolocation->countryCode = data["country code"].toString();
-        m_geolocation->accuracy = data["accuracy"].toInt();
-        m_geolocation->latitude = data["latitude"].toDouble();
-        m_geolocation->longitude = data["longitude"].toDouble();
-        kDebug() << "geolocation:" << m_geolocation->city << m_geolocation->country <<
-                m_geolocation->countryCode << m_geolocation->latitude << m_geolocation->longitude;
-        connectNearby(m_geolocation->latitude, m_geolocation->longitude);
+        m_geolocation.city = data["city"].toString();
+        m_geolocation.country = data["country"].toString();
+        m_geolocation.countryCode = data["country code"].toString();
+        m_geolocation.accuracy = data["accuracy"].toInt();
+        m_geolocation.latitude = data["latitude"].toDouble();
+        m_geolocation.longitude = data["longitude"].toDouble();
+        kDebug() << "geolocation:" << m_geolocation.city << m_geolocation.country <<
+                m_geolocation.countryCode << m_geolocation.latitude << m_geolocation.longitude;
+        connectNearby(m_geolocation.latitude, m_geolocation.longitude);
         saveGeoLocation();
     } else if (source == m_credentialsSource) {
         m_user = data["UserName"].toString();
@@ -314,20 +301,20 @@ void OpenDesktop::createConfigurationInterface(KConfigDialog *parent)
     connect(ui.registerButton, SIGNAL(clicked()), this, SLOT(registerAccount()));
     connect(locationUi.publishLocation, SIGNAL(clicked()), this, SLOT(publishGeoLocation()));
 
-    locationUi.city->setText(m_geolocation->city);
-    locationUi.latitude->setText(QString::number(m_geolocation->latitude));
-    locationUi.longitude->setText(QString::number(m_geolocation->longitude));
+    locationUi.city->setText(m_geolocation.city);
+    locationUi.latitude->setText(QString::number(m_geolocation.latitude));
+    locationUi.longitude->setText(QString::number(m_geolocation.longitude));
 
     locationUi.countryCombo->setInsertPolicy(QComboBox::InsertAlphabetically);
     foreach ( const QString &cc, KGlobal::locale()->allCountriesList() ) {
         locationUi.countryCombo->addItem(KGlobal::locale()->countryCodeToName(cc), cc);
     }
-    locationUi.countryCombo->setCurrentIndex(locationUi.countryCombo->findText(KGlobal::locale()->countryCodeToName(m_geolocation->countryCode)));
+    locationUi.countryCombo->setCurrentIndex(locationUi.countryCombo->findText(KGlobal::locale()->countryCodeToName(m_geolocation.countryCode)));
 
     // actually, 0,0 is a valid location, but here we're using it to see if we
     // actually have a location, a bit dirty but far less complex, especially given
     // that this point is located in the middle of the ocean off the coast of Ghana
-    if (m_geolocation->latitude == 0 && m_geolocation->longitude == 0) {
+    if (m_geolocation.latitude == 0 && m_geolocation.longitude == 0) {
         locationUi.publishLocation->setEnabled(false);
         
     connect(ui.provider , SIGNAL(currentIndexChanged(int)), parent , SLOT(settingsModified()));
@@ -366,11 +353,11 @@ void OpenDesktop::configAccepted()
 void OpenDesktop::configChanged()
 {
     KConfigGroup cg = config();
-    m_geolocation->city = cg.readEntry("geoCity", QString());
-    m_geolocation->country = cg.readEntry("geoCountry", QString());
-    m_geolocation->countryCode = cg.readEntry("geoCountryCode", QString());
-    m_geolocation->latitude = cg.readEntry("geoLatitude", 0.0);
-    m_geolocation->longitude = cg.readEntry("geoLongitude", 0.0);
+    m_geolocation.city = cg.readEntry("geoCity", QString());
+    m_geolocation.country = cg.readEntry("geoCountry", QString());
+    m_geolocation.countryCode = cg.readEntry("geoCountryCode", QString());
+    m_geolocation.latitude = cg.readEntry("geoLatitude", 0.0);
+    m_geolocation.longitude = cg.readEntry("geoLongitude", 0.0);
     
     QString provider = cg.readEntry("provider", QString("https://api.opendesktop.org/v1/"));
     if (provider != m_provider) {
@@ -403,13 +390,13 @@ void OpenDesktop::kcm_finished()
 void OpenDesktop::syncGeoLocation()
 {
     // Location tab
-    m_geolocation->city = locationUi.city->text();
-    m_geolocation->countryCode = locationUi.countryCombo->itemData(locationUi.countryCombo->currentIndex()).toString();
-    m_geolocation->country = locationUi.countryCombo->currentText();
-    m_geolocation->latitude = locationUi.latitude->text().toDouble();
-    m_geolocation->longitude = locationUi.longitude->text().toDouble();
+    m_geolocation.city = locationUi.city->text();
+    m_geolocation.countryCode = locationUi.countryCombo->itemData(locationUi.countryCombo->currentIndex()).toString();
+    m_geolocation.country = locationUi.countryCombo->currentText();
+    m_geolocation.latitude = locationUi.latitude->text().toDouble();
+    m_geolocation.longitude = locationUi.longitude->text().toDouble();
 
-    kDebug() << "New location:" << m_geolocation->city << m_geolocation->country << m_geolocation->countryCode << m_geolocation->latitude << m_geolocation->longitude;
+    kDebug() << "New location:" << m_geolocation.city << m_geolocation.country << m_geolocation.countryCode << m_geolocation.latitude << m_geolocation.longitude;
 
     saveGeoLocation();
 }
@@ -419,10 +406,10 @@ void OpenDesktop::publishGeoLocation()
     syncGeoLocation();
     // FIXME: Use service
     QString source = QString("PostLocation-%1:%2:%3:%4").arg(
-                                    QString("%1").arg(m_geolocation->latitude),
-                                    QString("%1").arg(m_geolocation->longitude),
-                                    m_geolocation->countryCode,
-                                    m_geolocation->city);
+                                    QString("%1").arg(m_geolocation.latitude),
+                                    QString("%1").arg(m_geolocation.longitude),
+                                    m_geolocation.countryCode,
+                                    m_geolocation.city);
     kDebug() << "updating location:" << source;
     m_engine->connectSource(source, this);
 }
@@ -430,11 +417,11 @@ void OpenDesktop::publishGeoLocation()
 void OpenDesktop::saveGeoLocation()
 {
     KConfigGroup cg = config();
-    cg.writeEntry("geoCity", m_geolocation->city);
-    cg.writeEntry("geoCountry", m_geolocation->country);
-    cg.writeEntry("geoCountryCode", m_geolocation->countryCode);
-    cg.writeEntry("geoLatitude", m_geolocation->latitude);
-    cg.writeEntry("geoLongitude", m_geolocation->longitude);
+    cg.writeEntry("geoCity", m_geolocation.city);
+    cg.writeEntry("geoCountry", m_geolocation.country);
+    cg.writeEntry("geoCountryCode", m_geolocation.countryCode);
+    cg.writeEntry("geoLatitude", m_geolocation.latitude);
+    cg.writeEntry("geoLongitude", m_geolocation.longitude);
 
     emit configNeedsSaving();
 }
